...
        imageView.layer.cornerRadius = 16
        return imageView
    }()
    
    let likeButton: UIButton = {
        let button = UIButton(type: .system)
        button.setImage(UIImage(named: "No Active"), for: .normal)
        button.translatesAutoresizingMaskIntoConstraints = false
        button.imageView?.contentMode = .scaleAspectFit
        button.contentVerticalAlignment = .center
        button.contentHorizontalAlignment = .center
        return button
    }()
...
        delegate?.imageListCellDidTapLike(self)
    }
    
    // MARK: - Setup
    
    func setIsLiked(_ isLiked: Bool) {
        let likeImageName = isLiked ? "Active" : "No Active"
        let likeImage = UIImage(named: likeImageName)?.withRenderingMode(.alwaysOriginal)
        likeButton.setImage(likeImage, for: .normal)
    }
    
    override init(style: UITableViewCell.CellStyle, reuseIdentifier: String?) {
        super.init(style: style, reuseIdentifier: reuseIdentifier)
...
