...
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="K3C-nL-M2P"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
                                    <color key="baseForegroundColor" name="YP Black"/>
                                </buttonConfiguration>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="16"/>
                                    </userDefinedRuntimeAttribute>
...
                                <rect key="frame" x="8" y="8" width="48" height="48"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="sW9-Lb-3V1"/>
                                    <constraint firstAttribute="width" constant="48" id="w7P-Dq-fSR"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="8q5-oG-b2e" eventType="touchUpInside" id="Bo9-h4-phw"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bGU-dX-n8o">
                                <rect key="frame" x="171" y="765" width="51" height="51"/>
...
